# Checkers-SFML

./: .gitignore  CMakeLists.txt  Checkers.sln  Checkers.vcxproj  Checkers.vcxproj.filters  Game.h  Piece.cpp  Piece.h  README.md  SceneRenderer.cpp  SceneRenderer.h  main.cpp
apple_cmake/: MacBundle.cmake
resources/: Checkers.icns
src/: AppController.cpp  AppController.h  Game.cpp  Helpers.cpp  Piece.cpp  PieceTypes.h  ResourcePath.cpp  ResourcePath.h  ResourcePath.mm  SceneRenderer.cpp  SceneRenderer.h
